Bug 274867 - [UnifiedPDF] Form annotations get stuck permanently on the document when navigating while an annotation is focused
Summary: [UnifiedPDF] Form annotations get stuck permanently on the document when navi...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: PDF (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Abrar Rahman Protyasha
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-29 15:44 PDT by Abrar Rahman Protyasha
Modified: 2024-05-30 12:19 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Abrar Rahman Protyasha 2024-05-29 15:44:08 PDT
rdar://128912717
Comment 1 Abrar Rahman Protyasha 2024-05-29 16:02:25 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29257
Comment 2 EWS 2024-05-30 12:19:05 PDT
Committed 279537@main (3cecef4425a0): <https://commits.webkit.org/279537@main>

Reviewed commits have been landed. Closing PR #29257 and removing active labels.